welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:1: error: not found: value ok
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {if (c>b) {if (b<ok) {return bOk}
                                                                         ^inOrder:1: error: type mismatch;
 found   : Unit
 required: Boolean
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {if (c>b) {if (b<ok) {return bOk}
                                                         ^